--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@sinclair/hammer",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "description": "Build Tool for HTML Applications.",
   "author": "sinclairzx81",
+  "keywords": ["esbuild", "bundler", "html"],
   "license": "MIT",
   "repository": {
     "type": "git",
