--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.8.10",
   "description": "Build Tool for HTML Applications.",
   "author": "sinclairzx81",
-  "keywords": ["esbuild", "bundler", "html"],
+  "keywords": [
+    "esbuild",
+    "bundler",
+    "html"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -25,6 +29,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "esbuild": "^0.11.9"
+    "esbuild": "^0.11.20"
   }
 }
