--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sinclair/hammer",
-  "version": "0.8.10",
+  "version": "0.9.0",
   "description": "Build Tool for HTML Applications.",
   "author": "sinclairzx81",
   "keywords": [
@@ -29,6 +29,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@sinclair/hammer": "^0.8.10",
     "esbuild": "^0.11.20"
   }
 }
