Explicitly use LF line endings

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,6 @@
         "target": "ESNext",
         "module": "CommonJS",
         "strict": true,
-
+        "newLine": "lf",
     }, "files": ["cli.ts"]
 }
