--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "scripts": {
     "clean": "smoke-task clean",
+    "format": "smoke-task format",
     "build": "smoke-task build",
     "start": "smoke-task start",
-    "install_cli": "smoke-task install_cli"
+    "install_cli": "smoke-task install_cli",
+    "publish": "smoke-task publish"
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
+    "prettier": "^2.7.1",
     "smoke-run": "^1.4.0",
     "smoke-task": "^1.1.4",
     "typescript": "^4.2.4"
