--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sinclair/hammer",
-  "version": "0.16.4",
+  "version": "0.17.0",
   "description": "Build Tool for Browser and Node Applications",
   "author": "sinclairzx81",
   "keywords": [
@@ -22,17 +22,20 @@
   },
   "scripts": {
     "clean": "smoke-task clean",
+    "format": "smoke-task format",
     "build": "smoke-task build",
     "start": "smoke-task start",
-    "install_cli": "smoke-task install_cli"
+    "install_cli": "smoke-task install_cli",
+    "publish": "smoke-task publish"
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
+    "prettier": "^2.7.1",
     "smoke-run": "^1.4.0",
     "smoke-task": "^1.1.4",
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "esbuild": "^0.14.5"
+    "esbuild": "^0.14.53"
   }
 }
