--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sinclair/hammer",
-  "version": "0.17.2",
+  "version": "0.18.0",
   "description": "Build Tool for Browser and Node Applications",
   "author": "sinclairzx81",
   "keywords": [
@@ -37,6 +37,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "esbuild": "^0.15.7"
+    "esbuild": "0.15.7"
   }
 }
